--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -6,8 +6,9 @@ dataSources:
     name: Web3RSVP
     network: mainnet
     source:
-      address: "0x5FbDB2315678afecb367f032d93F642f64180aa3"
+      address: ""
       abi: Web3RSVP
+      startBlock: #######
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.5
