--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -4,31 +4,30 @@ schema:
 dataSources:
   - kind: ethereum
     name: Web3RSVP
-    network: mainnet
+    network: goerli
     source:
-    # temporary address
-      address: "0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266"
+      address: "0x5F74d4f6eF3f8862b3B48a02275EC5C93eC10A14"
       abi: Web3RSVP
-      # startBlock: #######
+      startBlock: 6878159
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.5
       language: wasm/assemblyscript
       entities:
-        - Account
         - Event
-        - Confirmation
+        - Account
         - RSVP
+        - Confirmation
       abis:
         - name: Web3RSVP
           file: ./abis/Web3RSVP.json
       eventHandlers:
-        - event: NewEventCreated(bytes32,address,uint256,uint256,uint256,string)
-          handler: handleNewEventCreated
-        - event: NewRSVP(bytes32,address)
-          handler: handleNewRSVP
         - event: ConfirmedAttendee(bytes32,address)
           handler: handleConfirmedAttendee
         - event: DepositsPaidOut(bytes32)
           handler: handleDepositsPaidOut
+        - event: NewEventCreated(bytes32,address,uint256,uint256,uint256,string)
+          handler: handleNewEventCreated
+        - event: NewRSVP(bytes32,address)
+          handler: handleNewRSVP
       file: ./src/mapping.ts
